# LibraryProjectV2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: Book.h  FileIO.h  Library.h  LibraryItem.h  MyUtils.h  ReferenceBook.h  file_io.h  library.h  my_utils.h
overviews/: 11111.txt  11112.txt  11113.txt  11114.txt  11115.txt
src/: Book.cpp  FileIO.cpp  Library.cpp  MyUtils.cpp  ReferenceBook.cpp  file_io.cpp  library.cpp  my_utils.cpp
test/: my_utils_tests.cpp
